Rewrite LiquidThreads TOC code: * Use Xml:: shortcuts instead of inline HTML, reduces the risk of XSS and gives overall more readable code. * Use a proper <h2> element for the contents link, instead of one styled down to look like ordinary bold text. * Present in a table with other relevant information, instead of a long thin list. * Remove strange, unnecessary code.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@51512 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/LiquidThreads/lqt.css
+++ b/LiquidThreads/lqt.css
@@ -134,7 +134,6 @@ The archive and TOC on talkpages.
 .lqt_toc_archive_wrapper {
 	margin-top:    0.5em;
 	margin-bottom: 1.5em;
-	float:         left;
 }
 .lqt_archive_teaser ul,
 .lqt_toc_wrapper ul {
@@ -441,4 +440,16 @@ li#ca-nstab-thread {
 }
 .lqt_rc_author_notice_others {
 	color: #cd9800;
+}
+
+.lqt_toc {
+	width: 80%;
+	border-collapse: collapse;
+}
+
+.lqt_toc td,.lqt_toc th {
+	margin: 0;
+	padding: 0.2em;
+	border-bottom: 1px solid #aaaaaa;
+	text-align: left;
 }
