Massive LiquidThreads refactoring and reorganisation: * Totally rewrote almost all user-facing code to automatically generate HTML instead of hard-coding it. * Fixed at least two verified cross-site scripting vulnerabilities, with many other possible vectors plugged. * General code quality, fixed issues like indentation, internal documentation, variable naming, line breaking. * Changed to the strategy of "build HTML, then push it out" rather than pushing it to OutputPage line-by-line. This makes the code more modular, and makes it much easier to use the appropriate Xml functions for HTML generation. * Reimplemented ThreadHistoryListingView and TalkpageArchiveView to use the appropriate subclasses of Pager (ReverseChronologicalPager and TablePager) instead of home-grown solutions. * Fix a bug in NewMessages which was causing double-notification for edits to a user's talk page. * Implement function for Article which grabs the article text, using caches where appropriate, without all the associated cruft in Article::view. * Replace some functions defined in LiquidThreads which already exist in core (such as wfArrayToCGi and its reverse). * Other related minor changes.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@52307 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/LiquidThreads/lqt.css
+++ b/LiquidThreads/lqt.css
@@ -460,3 +460,9 @@ li#ca-nstab-thread {
 .lqt_toc td {
 	border-bottom: 1px solid #aaaaaa;
 }
+
+.lqt-newmessages-left {
+	padding-right: 1em;
+	vertical-align: top;
+	padding-top: 1em;
+}
